# breeze

./: .gitignore  .travis.yml  License.txt  README.md  line.sh  progress.md
db/: createdb.sql  db_auth.sql  db_info.sql  (+1 more)
depends/include/log4z/test/: CMakeLists.txt  advanced_test.cpp  advanced_test.vcproj  fast_test.cpp  project.sln  stress_test.cpp  stress_test.vcproj
depends/include/traceback/test/: CMakeLists.txt  main.cpp  test.vcxproj
depends_linux/include/proto4z/genProto.tools/: CMakeLists.txt  ControlProto2.xml  genProto.h  genProto.vcxproj  log4z.cpp  md5.cpp  md5.h  tinyxml2.h
depends_mac/include/log4z/: .gitignore  CMakeLists.txt  COPYRIGHT  log4z.h
depends_mac/include/log4z/g++/: CMakeLists.txt
depends_mac/include/log4z/test/: advanced_test.cpp  fast_test.cpp  project.sln  stress_test.cpp
depends_mac/include/proto4z/: CMakeLists.txt  Proto4z.cs  proto4z.h  proto4z.lua
depends_mac/include/proto4z/g++/: CMakeLists.txt
depends_mac/include/proto4z/test/: test.vcproj
depends_win/include/lua/: CMakeLists.txt
depends_win/include/lua/vc/: lua.vcxproj
source/: CMakeLists.txt  breeze.sln  common.txt  make.bat  make.sh  mini-breeze.sln
source/cluster/: CMakeLists.txt  application.cpp  cluster.vcxproj  cluster.vcxproj.filters  main.cpp
source/cluster/logic/: application.cpp  application.h  dbMgr.cpp  dbMgr.h  dbService.cpp  dbService.h  netMgr.cpp  netMgr.h  service.cpp  service.h  user.cpp  user.h  userMgr.cpp  userMgr.h  userMgrService.h  userService.cpp  userService.h
source/cluster/logic/chat/: chat.cpp  chat.h
source/cluster/logic/follow/: follow.h
source/cluster/logic/mission/: dailyMission.h  eventTrigger.cpp  eventTrigger.h
source/cluster/logic/testBlob/: testBlob.cpp  testBlob.h
source/common/: BaseHander.h  CMakeLists.txt  Common.h  DBClient.cpp  DBClient.h  DBHelper.cpp  DBHelper.h  GenObjectID.h  InnerTypeDefine.h  MongoManager.h  ProtoDefine.h  ServerConfig.cpp  ServerConfig.h  Single.h  any.h  balance.h  baseMessageHandler.h  base_message_handler.h  cmake_install.cmake  common.h  common.vcxproj  common.vcxproj.filters  config.cpp  config.h  dbAsync.cpp  dbAsync.h  dbDict.cpp  dbDict.h  defined.h  dispatch.cpp  dispatch.h  genID.h  genObjectID.h  gen_objectid.h  handler.h  innerDefined.h  inner_defined.h  messageHandler.h  nested_map.h  serverConfig.cpp  (+8 more)
source/common/aoe/: aoe.cpp  aoe.h
source/common/bcui/: bcui.cpp  bcui.h  cui.cpp  cui.h
source/common/dbhelper/: dbHelper.cpp  dbHelper.h
source/common/lua/: lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lbitlib.c  lcode.c  lcode.h  lctype.c  lctype.h  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.h  lgc.c  lgc.h  liolib.c  llex.c  llex.h  llimits.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lpack.c  lparser.c  lparser.h  lprefix.h  lproto4z.c  lstate.c  lstate.h  lstring.c  lstring.h  (+19 more)
source/common/luaextra/: lproto4z.c  performance.cpp  performance.h  summer.cpp
source/common/md5/: md5.cpp  md5.h
source/common/rvo2/: Agent.cpp  Agent.h  Definitions.h  KdTree.cpp  KdTree.h  Obstacle.cpp  Obstacle.h  RVO.h  RVOSimulator.cpp  RVOSimulator.h  Vector2.h
source/common/tinyxml2/: tinyxml2.h
source/docker/: CMakeLists.txt  docker.vcxproj  docker.vcxproj.filters  main.cpp
source/docker/logic/: application.cpp  application.h  avatarMgrService.cpp  avatarMgrService.h  avatarService.cpp  avatarService.h  dbService.cpp  dbService.h  docker.cpp  docker.h  module.cpp  module.h  monitorService.cpp  monitorService.h  offlineService.cpp  offlineService.h  service.cpp  service.h  shellService.cpp  shellService.h  space.cpp  space.h  spaceMgr.cpp  spaceMgr.h  userMgrService.cpp  userMgrService.h  userService.cpp  userService.h  webService.cpp  webService.h
source/docker/logic/avatarModules/: sceneModule.cpp  sceneModule.h
source/logic/: CMakeLists.txt  application.cpp  application.h  logic.vcxproj  logic.vcxproj.filters  main.cpp
source/logic/logic/: dbManager.cpp  dbManager.h  dbMgr.cpp  dbMgr.h  netManager.cpp  netManager.h  netMgr.cpp  userManager.cpp  userManager.h
source/logic/logic/chat/: chat.cpp  chat.h  chatManager.cpp  chatManager.h
source/logic/logic/follow/: follow.cpp
source/logic/logic/friend/: friend.cpp  friend.h
source/logic/logic/login/: login.cpp  login.h
source/logic/logic/mission/: dailyMission.cpp  dailyMission.h  eventTrigger.cpp  eventTrigger.h
source/logic/logic/testBlob/: createTestAuthInfo.cpp  createTestAuthInfo.h  testBlob.cpp  testBlob.h
source/makedb/: CMakeLists.txt  main.cpp  makedb.vcxproj  makedb.vcxproj.filters
source/mini-breeze/: Application.cpp  Application.h  CMakeLists.txt  application.cpp  main.cpp  mini-breeze.vcxproj  mini-breeze.vcxproj.filters
source/mini-breeze/core/: GlobalFacade.cpp  GlobalFacade.h  NetManager.cpp  NetManager.h
source/mini-breeze/logic/: DBManager.cpp  DBManager.h  NetManager.cpp  NetManager.h  dbManager.cpp  dbManager.h  netManager.cpp  netManager.h
source/opengl/: JuliaSet.html  Sierpinski.html  main.cpp  opengl.vcxproj  opengl.vcxproj.filters
source/opengl/glfw/winsrc/: egl_context.h  glfw_config.h  internal.h  win32_joystick.c  win32_platform.h
source/scene/: CMakeLists.txt  main.cpp  scene.vcxproj  scene.vcxproj.filters
source/scene/logic/: ai.cpp  ai.h  entity.cpp  entity.h  move.cpp  move.h  scene.cpp  scene.h  sceneMgr.cpp  sceneMgr.h  script.cpp  script.h  skill.cpp  skill.h
source/space/: CMakeLists.txt  main.cpp  space.vcxproj  space.vcxproj.filters
source/space/logic/: entity.cpp  entity.h  space.cpp  space.h  spaceMgr.cpp  spaceMgr.h
source/stress/: CMakeLists.txt  StressTest.vcxproj  stress.cpp
source/stressTest/: CMakeLists.txt  StressTest.vcxproj  stressMain.cpp
source/stressTest/lua/: CMakeLists.txt  summer.cpp
source/test/: CMakeLists.txt  aoeTest.h  aoeViewer.h  arith_gray_code.h  arith_prime.h  arith_sort.h  main.cpp  test.cpp  test.h  test.vcxproj  utlsTest.h  vectorViewer.h
source/world/: CMakeLists.txt  main.cpp  world.vcxproj  world.vcxproj.filters
source/world/logic/: world.cpp  world.h
(+362 files in other folders)
